--- a/static/index.html
+++ b/static/index.html
@@ -7,16 +7,14 @@
 
 	<body>
 		<div id="app">
-			{{ headers }}
 			<ol>
 				<li v-for="(header, index) in headers">
-					{{ header.Subject }}
-					{{ index }}
+					{{ header }}
 				</li>
 			</ol>
 		</div>
-		<script src="//unpkg.com/vue/dist/vue.js"></script>
 		<script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
+		<script src="//unpkg.com/vue/dist/vue.js"></script>
 		<script src="app.js"></script>
 	</body>
 </html>
