--- a/static/index.html
+++ b/static/index.html
@@ -14,20 +14,22 @@
 				<div id='search_options_toggle' @click="toggleSearchOptions()">Advanced Options</div>
 				<div id='search_options'>
 					<div id='search_options_fields'>
-						Search these fields:
-						<template v-for="field in fields">
-							<input type="checkbox" :value='field' v-model="searchFields">{{field}}
-						</template>
+						<div class='label'>Search these fields:</div>
+						<div class='value'>
+							<template v-for="field in fields">
+								<input type="checkbox" :value='field' v-model="searchFields">{{field}}
+							</template>
+						</div>
 
 					</div>
 					<div id='search_options_time'>
-						Search back this many days:
-						<input type="text" size=4 v-model="searchDays">&nbsp;(zero is unlimited)
+						<div class='label'>Search back this many days:</div>
+						<div class='value'><input type="text" size=4 v-model="searchDays">&nbsp;(zero is unlimited)</div>
 					</div>
 				</div>
 			</div>
 			<div class='results_stats' v-if="headers">{{ headers.length }} result(s)</div>
-			<table class='message_list'>
+			<table class='message_list' v-if="headers.length > 0">
 				<th>Subject</th>
 				<th>From</th>
 				<th>To</th>
