--- a/static/index.html
+++ b/static/index.html
@@ -15,8 +15,8 @@
 			</div>
 			</modal>
 			<div id='search_bar'>
-				<input type="search" size=50 @keyup.enter="search()" v-model="query" placeholder="search keyword">
-				<button @click="search()">Search</button>
+				<input type="search" size=50 @keyup.enter="searchMsg()" v-model="query" placeholder="search keyword">
+				<button @click="searchMsg()">Search</button>
 				<div id='search_options_toggle' @click="toggleSearchOptions()">Advanced Options</div>
 				<div id='search_options'>
 					<div id='search_options_fields'>
