--- a/static/index.html
+++ b/static/index.html
@@ -6,55 +6,58 @@
 		<link rel="stylesheet" type="text/css" href="app.css">
 	</head>
 	<body>
-		<div id='logo'>IceMail <img src="icemail_logo.png" /></div>
-		<div id="app" v-cloak>
-			<modal v-if="showModal" @close="closeModal">
-			<h3 slot="header">{{modal.Title}}</h3>
-			<div slot="body">
-				<pre class='email_body'>{{modal.Body}}</pre>
-			</div>
-			</modal>
-			<div id='search_bar'>
-				<input type="search" size=50 @keyup.enter="searchMsg()" v-model="request.query" placeholder="search keyword">
-				<button @click="searchMsg()">Search</button>
-				<div id='search_options_toggle' @click="toggleSearchOptions()">Advanced Options</div>
-				<div id='search_options'>
-					<div id='search_options_fields'>
-						<div class='label'>Search these fields:</div>
-						<div class='value'>
-							<template v-for="field in fields">
-								<input type="checkbox" :value='field' v-model="request.locations">{{field}}
-							</template>
-						</div>
+		<div id="container">
+			<div id='logo'>IceMail <img src="icemail_logo.png" /></div>
+			<div id="app" v-cloak>
+				<modal v-if="showModal" @close="closeModal">
+				<h3 slot="header">{{modal.Title}}</h3>
+				<div slot="body">
+					<pre class='email_body'>{{modal.Body}}</pre>
+				</div>
+				</modal>
+				<div id='search_bar'>
+					<input type="search" size=50 @keyup.enter="searchMsg()" v-model="request.query" placeholder="search keyword">
+					<button @click="searchMsg()">Search</button>
+					<div id='search_options_toggle' @click="toggleSearchOptions()">Advanced Options</div>
+					<div id='search_options'>
+						<div id='search_options_fields'>
+							<div class='label'>Search these fields:</div>
+							<div class='value'>
+								<template v-for="field in fields">
+									<input type="checkbox" :value='field' v-model="request.locations">{{field}}
+								</template>
+							</div>
 
+						</div>
+						<div id='search_options_time'>
+							<div class='label'>Search back this many days:</div>
+							<div class='value'><input type="text" size=4 v-model="searchDays">&nbsp;(zero is unlimited)</div>
+						</div>
 					</div>
-					<div id='search_options_time'>
-						<div class='label'>Search back this many days:</div>
-						<div class='value'><input type="text" size=4 v-model="searchDays">&nbsp;(zero is unlimited)</div>
+				</div>
+				<div class='no_results' v-if='!result.emails.length'>No results</div>
+				<div class='results_bar' v-if='result.emails.length'>
+					<div class='results_action' @click="searchMsg('back')">
+						<div class='arrow left'></div>
+					</div>
+					<div class='results_stats'>{{ result.offset + 1 }} to {{ result.offset + result.emails.length }} of {{result.total}}</div>
+					<div class='results_action' @click="searchMsg('fwd')">
+						<div class='arrow right'></div>
 					</div>
 				</div>
+				<table class='message_list' v-if="result.emails.length > 0">
+					<th>Subject</th>
+					<th>From</th>
+					<th>To</th>
+					<th>Date</th>
+					<tr v-for="(email, index) in result.emails" @click="viewMessage(email.ID)">
+						<td>{{ email.Header.Subject[0] }}</td>
+						<td>{{ email.Header.From[0] }}</td>
+						<td>{{ email.Header.To[0] }}</td>
+						<td>{{ email.Header.Date[0] }}</td>
+					</tr>
+				</table>
 			</div>
-			<div class='results_bar'>
-				<div class='results_action' @click="searchMsg('back')">
-					<div class='arrow left'></div>
-				</div>
-				<div class='results_stats'>{{ result.offset + 1 }} to {{ result.offset + result.emails.length }} of {{result.total}}</div>
-				<div class='results_action' @click="searchMsg('fwd')">
-					<div class='arrow right'></div>
-				</div>
-			</div>
-			<table class='message_list' v-if="result.emails.length > 0">
-				<th>Subject</th>
-				<th>From</th>
-				<th>To</th>
-				<th>Date</th>
-				<tr v-for="(email, index) in result.emails" @click="viewMessage(email.ID)">
-					<td>{{ email.Header.Subject[0] }}</td>
-					<td>{{ email.Header.From[0] }}</td>
-					<td>{{ email.Header.To[0] }}</td>
-					<td>{{ email.Header.Date[0] }}</td>
-				</tr>
-			</table>
 		</div>
 
 		<!-- template for the modal component -->
@@ -86,8 +89,8 @@
 		    </div>
 		  </transition>
 		</script>
-		<script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
-		<script src="//unpkg.com/vue/dist/vue.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/vue/2.1.4/vue.min.js"></script>
 		<script src="app.js"></script>
 	</body>
 </html>
