--- a/static/index.html
+++ b/static/index.html
@@ -11,14 +11,14 @@
 			<div id="app" v-cloak>
 				<modal v-if="showModal" @close="closeModal">
 				<div slot="header">
-					<h3>{{modal.Title}}</h3>
 					<div class='email_actions'>
-						<button v-if='modal.Delivered == ""' class="modal-sendmail-button" @click="sendMsg(modal.ID)">Send Mail</button>
-						<span class='delivered_date' v-if='modal.Delivered != ""'>Email was delivered on {{modal.Delivered}}</span>
+						<button v-if='modal.delivered == ""' class="modal-sendmail-button" @click="sendMsg(modal.id)">Send Mail</button>
+						<span class='delivered_date' v-if='modal.delivered != ""'>Email was delivered on {{modal.delivered}}</span>
 					</div>
+					<div class='email_title'>{{modal.title}}</div>
 				</div>
 				<div slot="body">
-					<pre class='email_body'>{{modal.Body}}</pre>
+					<pre class='email_body'>{{modal.body}}</pre>
 				</div>
 				</modal>
 				<div id='search_bar'>
@@ -26,31 +26,25 @@
 					<button @click="searchMsg()">Search</button>
 					<div id='search_options_toggle' @click="toggleSearchOptions()">Advanced Options</div>
 					<div id='search_options'>
-						<div id='search_options_fields'>
-							<div class='label'>Search these fields:</div>
-							<div class='value'>
-								<template v-for="field in fields">
-									<input type="checkbox" :value='field' v-model="request.locations">{{field}}
-								</template>
-							</div>
-
+						<div class='label'>Search these fields:</div>
+						<div class='value'>
+							<template v-for="field in fields">
+								<input type="checkbox" :value='field' v-model="request.locations">{{field}}
+							</template>
 						</div>
-						<div id='search_options_time'>
-							<div class='label'>Search back this many days:</div>
-							<div class='value'><input type="text" size=4 v-model="searchDays">&nbsp;(zero is unlimited)</div>
-						</div>
+						<div class='label'>Search back this many days:</div>
+						<div class='value'><input type="text" size=4 v-model="searchDays">&nbsp;(zero is unlimited)</div>
 					</div>
 				</div>
 				<div class='no_results' v-if='!result.emails.length'>No results</div>
-				<div class='results_bar' v-if='result.emails.length'>
-					<div class='results_action' @click="searchMsg('back')">
-						<div class='arrow left'></div>
+				<template v-if='result.emails.length'>
+					<div class='results_bar' v-if='result.pages > 1'>
+						<div class='results_stats'>{{ result.offset + 1 }} to {{ result.offset + result.emails.length }} of {{result.total}} results</div>
 					</div>
-					<div class='results_stats'>{{ result.offset + 1 }} to {{ result.offset + result.emails.length }} of {{result.total}}</div>
-					<div class='results_action' @click="searchMsg('fwd')">
-						<div class='arrow right'></div>
+					<div class='results_bar' v-if='result.pages == 1'>
+						<div class='results_stats'>{{result.emails.length}} results</div>
 					</div>
-				</div>
+				</template>
 				<table class='message_list' v-if="result.emails.length > 0">
 					<th></th>
 					<th>Subject</th>
@@ -65,6 +59,25 @@
 						<td class='fixed_col'>{{ email.Header.Date[0] | fromNow }}</td>
 					</tr>
 				</table>
+				<div class='results_bar' v-if='result.emails.length && result.pages > 1'>
+					<div class='results_action' @click="searchMsg('back')">
+						<div v-if='result.offset > 0' class='arrow left'></div>
+					</div>
+					<template v-if='result.pages <= 5' v-for="n in result.pages">
+						<span class='results_page' :class='pageActive(n)' @click="searchMsg('page', n)">{{n}}</span>
+					</template>
+					<template v-if='result.pages > 3'>
+						<template v-for="n in 3">
+							<span class='results_page' :class='pageActive(n)' @click="searchMsg('page', n)">{{n}}</span>
+						</template>
+						...
+						<span class='results_page' :class='pageActive(result.pages-1)' @click="searchMsg('page', result.pages-1)">{{result.pages-1}}</span>
+						<span class='results_page' :class='pageActive(result.pages)' @click="searchMsg('page', result.pages)">{{result.pages}}</span>
+					</template>
+					<div class='results_action' @click="searchMsg('fwd')">
+						<div v-if='result.offset + result.emails.length < result.total' class='arrow right'></div>
+					</div>
+				</div>
 			</div>
 		</div>
 
