--- a/static/index.html
+++ b/static/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>IceMail</title>
-		<link rel="stylesheet" type="text/css" href="app.css">
+		<link rel="stylesheet" type="text/css" href="css/app.css">
 	</head>
 	<body>
-		<div id="container">
-			<div id='logo'>IceMail <img src="icemail_logo.png" /></div>
+		<div class="container">
+			<div id='logo'>IceMail <img src="img/icemail_logo.png" /></div>
 			<div id="app" v-cloak>
 				<modal v-if="showModal" @close="closeModal">
 				<div slot="header">
@@ -46,11 +46,13 @@
 					</div>
 				</template>
 				<table class='message_list' v-if="result.emails.length > 0">
-					<th></th>
-					<th>Subject</th>
-					<th>From</th>
-					<th>To</th>
-					<th>Date</th>
+					<tr>
+						<th></th>
+						<th>Subject</th>
+						<th>From</th>
+						<th>To</th>
+						<th>Date</th>
+					</tr>
 					<tr v-for="(email, index) in result.emails" @click="viewMsg(email.ID)">
 						<td class='flag_col'><span class='delivered_flag'><span v-if='email.Delivered'>X</span></span></td>
 						<td>{{ email.Header.Subject[0] }}</td>
@@ -111,6 +113,6 @@
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/vue/2.1.4/vue.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>
-		<script src="app.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 </html>
