--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>IceMail</title>
-		<link rel="stylesheet" type="text/css" href="vendor/fontello/css/fontello.css">
+		<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/app.css">
 	</head>
 	<body>
@@ -23,8 +23,15 @@
 				</div>
 				</modal>
 				<div id='search_bar'>
-					<input type="search" size=50 @keyup.enter="searchMsg()" v-model="request.query" placeholder="search keyword">
-					<button @click="searchMsg()"><i class='icon-search'></i>Search</button>
+					<form class="form-inline">
+						<div class="form-group">
+							<div class="input-group">
+								<div class="input-group-addon"><span class='icon-search'></span></i></div>
+								<input type="search" class="form-control" @keyup.enter="searchMsg()" v-model="request.query" placeholder="search keyword">
+							</div>
+						</div>
+						<button @click="searchMsg()" class="btn btn-default">Search</button>
+					</form>
 					<div id='search_options_toggle' @click="toggleSearchOptions()"><i class='icon-cog'></i>Advanced Options</div>
 					<div id='search_options'>
 						<div class='label'>Search these fields:</div>
@@ -46,7 +53,7 @@
 						<div class='results_stats'>{{result.emails.length}} results</div>
 					</div>
 				</template>
-				<table class='message_list' v-if="result.emails.length > 0">
+				<table class='table table-striped table-hover' v-if="result.emails.length > 0">
 					<tr>
 						<th></th>
 						<th>Subject</th>
@@ -114,6 +121,7 @@
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/vue/2.1.4/vue.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>
+		<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
