--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<div id='logo'>IceMail <img src="img/icemail_logo.png" /></div>
+			<div id='logo'>IceMail <a href='https://github.com/porjo/icemail' target='_blank'><img src="img/icemail_logo.png" /></a></div>
 			<div id="app" v-clock>
 				<router-view></router-view>
 			</div>
